fixed ...the cart is empty... text styling on mobile screens

--- a/src/containers/Checkout/Checkout.module.css
+++ b/src/containers/Checkout/Checkout.module.css
@@ -72,6 +72,10 @@
 		display: inline-block;
 	}
 
+	.LeftCheck h2 {
+		justify-content: center;
+	}
+
 }
 
 @media screen and (max-width: 600px) {
